refactor(html): use BEM

--- a/index.html
+++ b/index.html
@@ -10,21 +10,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost&display=swap" rel="stylesheet">
 
     <title>Calculator</title>
+
+    <script src="src/script/script.js" defer></script>
 </head>
 
-<body>
-    <div class="container">
-        <h1 class="title">calculator</h1>
+<body class="container">
+    <div class="calculator">
+        <h1 class="calculator__title">calculator</h1>
 
-        <div class="outPutSubTitle">
-            140 + 15 + 5
+        <div class="calculator__panel">
+            <div class="calculator__panel-outPutSubTitle">140 + 20</div>
+            <div class="calculator__panel-outPutTitle">160</div>
         </div>
 
-        <div class="outPutTitle">
-            160
-        </div>
-
-        <div class="buttons grid">
+        <div class="calculator__buttons grid">
             <button class="button" id="del">C</button>
             <button class="button" id="mul">×</button>
             <button class="button" id="div">÷</button>
