refactor(layout): completed BEM layout

--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
         <h1 class="calculator__title">calculator</h1>
 
         <div class="calculator__panel">
-            <div class="calculator__panel-outPutSubTitle">140 + 20</div>
-            <div class="calculator__panel-outPutTitle">160</div>
+            <div class="calculator__panel-decision">140 + 20</div>
+            <div class="calculator__panel-result">160</div>
         </div>
 
-        <div class="calculator__buttons grid">
-            <button class="button" id="del">C</button>
-            <button class="button" id="mul">×</button>
-            <button class="button" id="div">÷</button>
-            <button class="button" id="neg"></button>
+        <div class="calculator__buttons grid" id="calculator__buttons">
+            <button class="calculator__button">C</button>
+            <button class="calculator__button">×</button>
+            <button class="calculator__button">÷</button>
+            <button class="calculator__button calculator__button-delete"></button>
 
-            <button class="button" id="7">7</button>
-            <button class="button" id="8">8</button>
-            <button class="button" id="9">9</button>
-            <button class="button" id="den">-</button>
+            <button class="calculator__button">7</button>
+            <button class="calculator__button">8</button>
+            <button class="calculator__button">9</button>
+            <button class="calculator__button">-</button>
 
-            <button class="button" id="4">4</button>
-            <button class="button" id="5">5</button>
-            <button class="button" id="6">6</button>
-            <button class="button" id="add">+</button>
+            <button class="calculator__button">4</button>
+            <button class="calculator__button">5</button>
+            <button class="calculator__button">6</button>
+            <button class="calculator__button">+</button>
 
-            <button class="button" id="1">1</button>
-            <button class="button" id="2">2</button>
-            <button class="button" id="3">3</button>
+            <button class="calculator__button">1</button>
+            <button class="calculator__button">2</button>
+            <button class="calculator__button">3</button>
 
-            <button class="button" id="equ">=</button>
+            <button class="calculator__button calculator__button-long">=</button>
 
-            <button class="button" id="buttonercent">%</button>
-            <button class="button" id="0">0</button>
-            <button class="button" id="com">,</button>
+            <button class="calculator__button">%</button>
+            <button class="calculator__button">0</button>
+            <button class="calculator__button">,</button>
         </div>
     </div>
 
