--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
         <h1 class="calculator__title">calculator</h1>
 
         <div class="calculator__panel">
-            <div class="calculator__panel-decision">140 + 20</div>
-            <div class="calculator__panel-result">160</div>
+            <div class="calculator__panel-decision"></div>
+            <div class="calculator__panel-result"></div>
         </div>
 
         <div class="calculator__buttons grid" id="calculator__buttons">
-            <button class="calculator__button">C</button>
-            <button class="calculator__button">×</button>
-            <button class="calculator__button">÷</button>
+            <button class="calculator__button clear">C</button>
+            <button class="calculator__button operator">×</button>
+            <button class="calculator__button operator">÷</button>
             <button class="calculator__button calculator__button-delete"></button>
 
-            <button class="calculator__button">7</button>
-            <button class="calculator__button">8</button>
-            <button class="calculator__button">9</button>
-            <button class="calculator__button">-</button>
+            <button class="calculator__button number">7</button>
+            <button class="calculator__button number">8</button>
+            <button class="calculator__button number">9</button>
+            <button class="calculator__button operator">-</button>
 
-            <button class="calculator__button">4</button>
-            <button class="calculator__button">5</button>
-            <button class="calculator__button">6</button>
-            <button class="calculator__button">+</button>
+            <button class="calculator__button number">4</button>
+            <button class="calculator__button number">5</button>
+            <button class="calculator__button number">6</button>
+            <button class="calculator__button operator">+</button>
 
-            <button class="calculator__button">1</button>
-            <button class="calculator__button">2</button>
-            <button class="calculator__button">3</button>
+            <button class="calculator__button number">1</button>
+            <button class="calculator__button number">2</button>
+            <button class="calculator__button number">3</button>
 
-            <button class="calculator__button calculator__button-long">=</button>
+            <button class="calculator__button calculator__button-long operator">=</button>
 
-            <button class="calculator__button">%</button>
-            <button class="calculator__button">0</button>
-            <button class="calculator__button">,</button>
+            <button class="calculator__button operator">%</button>
+            <button class="calculator__button number">0</button>
+            <button class="calculator__button">.</button>
         </div>
     </div>
 
