--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="calculator__button clear">C</button>
             <button class="calculator__button operator">×</button>
             <button class="calculator__button operator">÷</button>
-            <button class="calculator__button calculator__button-delete"></button>
+            <button class="calculator__button calculator__button-delete delete"></button>
 
             <button class="calculator__button number">7</button>
             <button class="calculator__button number">8</button>
