fix(styles): adaptive

--- a/index.html
+++ b/index.html
@@ -19,35 +19,34 @@
         <h1 class="calculator__title">calculator</h1>
 
         <div class="calculator__panel">
-            <div class="calculator__panel-decision"></div>
-            <div class="calculator__panel-result"></div>
+            <div class="calculator__panel-decision">0</div>
+            <div dir="rtl" class="calculator__panel-result">0</div>
         </div>
 
         <div class="calculator__buttons grid" id="calculator__buttons">
-            <button class="calculator__button clear">C</button>
-            <button class="calculator__button operator">×</button>
-            <button class="calculator__button operator">÷</button>
-            <button class="calculator__button operator">%</button>
+            <button class="calculator__button clear" value="C">C</button>
+            <button class="calculator__button operator" value="*">×</button>
+            <button class="calculator__button operator" value="/">÷</button>
+            <button class="calculator__button operator" value="%">%</button>
 
-            <button class="calculator__button number">7</button>
-            <button class="calculator__button number">8</button>
-            <button class="calculator__button number">9</button>
-            <button class="calculator__button operator">-</button>
+            <button class="calculator__button number" value="7">7</button>
+            <button class="calculator__button number" value="8">8</button>
+            <button class="calculator__button number" value="9">9</button>
+            <button class="calculator__button operator" value="-">-</button>
 
-            <button class="calculator__button number">4</button>
-            <button class="calculator__button number">5</button>
-            <button class="calculator__button number">6</button>
-            <button class="calculator__button operator">+</button>
+            <button class="calculator__button number" value="4">4</button>
+            <button class="calculator__button number" value="5">5</button>
+            <button class="calculator__button number" value="6">6</button>
+            <button class="calculator__button operator" value="+">+</button>
 
-            <button class="calculator__button number">1</button>
-            <button class="calculator__button number">2</button>
-            <button class="calculator__button number">3</button>
+            <button class="calculator__button number" value="1">1</button>
+            <button class="calculator__button number" value="2">2</button>
+            <button class="calculator__button number" value="3">3</button>
 
-            <button class="calculator__button calculator__button-long operator">=</button>
+            <button class="calculator__button calculator__button-long" value="=">=</button>
 
-
-            <button class="calculator__button calculator__button-width number">0</button>
-            <button class="calculator__button">.</button>
+            <button class="calculator__button calculator__button-width number" value="0">0</button>
+            <button class="calculator__button" value=".">,</button>
         </div>
     </div>
 
